background-problem-solved

--- a/projet/src/styles.css
+++ b/projet/src/styles.css
@@ -3,7 +3,7 @@
 
 body {
 
-  background-image: url('https://i2.ppvise.site/gimg/e6d37110df.jpg');
+  background-image: url('004201b183.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
